Allow chunked streaming control
